[project]
name = "algorithm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.15.0",
 "pre-commit>=4.2.0",
 "pytest>=8.3.5",
 "ruff>=0.11.5",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ERA",
    "PGH",
    "RUF003",
    "E501",
    "COM",
    "FA102",
    "T20",
    "TD",
    "FIX",
    "BLE",
    "S",
    "G",
    "TC",
    "RUF001", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
]

[tool.mypy]
strict = true
